<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="add_edit_text" />
</resources>