<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ListView
        android:id="@+id/list_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_weight="5" />

    <Button
        android:id="@+id/list_send_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_send_button"
        android:textColor="@color/white"
        android:layout_marginVertical="12dp"
        android:layout_weight="1"/>

</LinearLayout>